--- a/flair-training.html
+++ b/flair-training.html
@@ -6,7 +6,7 @@
     <title>Buttons</title>
     <link rel="stylesheet" href="./thebutton.css">
     <link rel="stylesheet" href="./thebutton-extra.css">
-    <script src="http://code.jquery.com/jquery-2.1.3.min.js"></script>
+    <script src="//code.jquery.com/jquery-2.1.3.min.js"></script>
     <script type="text/javascript" src="https://www.google.com/jsapi"></script>
     <style>
     .flair {
