--- a/getting-to-zero.html
+++ b/getting-to-zero.html
@@ -5,7 +5,7 @@
     <meta charset=utf-8>
     <title>Buttons</title>
     <link rel="stylesheet" href="./thebutton.css">
-    <script src="http://code.jquery.com/jquery-2.1.3.min.js"></script>
+    <script src="//code.jquery.com/jquery-2.1.3.min.js"></script>
     <script type="text/javascript" src="https://www.google.com/jsapi"></script>
     <style>
     .thebutton-counter {
